# mcp_server

./: .claudeignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  email_sender.py  logging_config.py  on_demand.py  pyproject.toml  server.py
.github/workflows/: daily-newsletter.yml
ios-sleep-app/: README.md
ios-sleep-app/SleepHealth.xcodeproj/: project.pbxproj
ios-sleep-app/SleepHealth/Resources/: Info.plist
ios-sleep-app/SleepHealth/Sources/: ContentView.swift  SleepDataManager.swift  SleepHealthApp.swift
tests/: response.json  test_daily_summary.py  test_finance.py  test_main.py  test_news.py  test_strava.py
tools/: daily_summary.py  finance.py  news.py  strava.py
tools/news/: on_demand.py
tools/spotify/: get_refresh_token.py  on_demand.py  spotify.py
