[project]
name = "mcp-server"
version = "0.1.0"
description = "FastMCP server with math, email, news, finance, and Strava tools"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
  "fastmcp==3.1.0",
  "feedparser>=6.0.12",
  "httpx>=0.28.1",
  "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.9.0",
]
